--- a/Bikecraft/style.css
+++ b/Bikecraft/style.css
@@ -7,12 +7,38 @@ body{
   font-family: arial,sans-serif;
 }
 
-p, h1, h2, h3, span {
+header{
+  display: grid;
+  justify-items: center;
+  gap: 50px;
+}
+nav ul{
+  gap: 20px;
+  display: flex;
+  list-style: none;
+  padding: 15px 30px;
+
+}
+
+.menuteste a {
+  background: #ffff;
+  color: black;
+font-weight: 600;
+  padding: 15px 30px;
+  border-radius: 4px;
+  justify-content: center;
+  border: 2px solid #fff;
+}
+nav ul li a:hover{
+  border: 2px solid #900;
+}
+
+article, p, h1, h2, h3, span {
   margin: 0px;
 }
 
-p{
-  font-size: 20px;
+article, p{
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
@@ -24,19 +50,10 @@ a{
   text-decoration: none;
 }
 
-.menu{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
+.introducao h1{
+  font-size: 2rem;
 
-.menu a {
-  background: #ffff;
-  padding: 15px 30px;
-  border-radius: 4px;
 }
-
 .conteudo{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -68,7 +85,22 @@ justify-items: end;
 padding: 15px 40px;
 }
 
-.traco{
+.botao:hover{
+  background-color: #900;
+}
+
+.introducao::before{
+  content: "";
+  background-color: #ee2211;
+  width: 5rem;
+  height: 0.3rem;
+  display: flex;
+  position: absolute;
+  right: -39px;
+  top: 1rem;
+}
+
+/* .traco{
   display: inline-block;
   width: 60px;
   height: 4px;
@@ -76,10 +108,11 @@ padding: 15px 40px;
   position: absolute;
   top: 30px;
   right: -30px;
-}
+} */
 
 .subtitulo{
-  background: #f7f7f7;
+  background-color: #f7f7f7;
+  background-image: url("/img/onda.svg");
   color: #c6c6c6;
   font-size: 64px;
   padding: 40px;
@@ -92,6 +125,15 @@ padding: 15px 40px;
   padding: 40px;
   position: relative;
 }
+.vantagens li:nth-child(odd){
+  background-color: #f7f7f7;
+  }
+
+.vantagens-item:hover {
+  border-left: 4px solid red;
+  padding-left: 15px;
+}
+
 
 .vantagens-item{
   display: grid;
@@ -111,4 +153,3 @@ padding: 20px;
   padding: 40px;
   box-sizing: border-box;
 }
-
